[gd_scene load_steps=2 format=3 uid="uid://duih5xml78ylh"]

[ext_resource type="Script" path="res://pet.gd" id="1_cleai"]

[node name="Pet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cleai")
metadata/_edit_lock_ = true

[node name="StatusLbl" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.495
anchor_right = 0.5
anchor_bottom = 0.495
offset_left = -180.0
offset_top = -17.76
offset_right = 179.0
offset_bottom = 5.23999
grow_horizontal = 2
grow_vertical = 2
text = "Status"
horizontal_alignment = 1

[node name="SleepBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.463
anchor_top = 0.592
anchor_right = 0.463
anchor_bottom = 0.592
offset_left = 14.624
offset_top = -13.616
offset_right = 70.624
offset_bottom = 17.384
grow_horizontal = 2
grow_vertical = 2
text = "Sleep"

[node name="WakeBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.463
anchor_top = 0.592
anchor_right = 0.463
anchor_bottom = 0.592
offset_left = -45.376
offset_top = -13.616
offset_right = 10.624
offset_bottom = 17.384
grow_horizontal = 2
grow_vertical = 2
text = "Sleep"

[node name="FeedBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.526
anchor_top = 0.59
anchor_right = 0.526
anchor_bottom = 0.59
offset_left = 2.04797
offset_top = -12.32
offset_right = 53.048
offset_bottom = 18.68
grow_horizontal = 2
grow_vertical = 2
text = "Feed"

[node name="PrepareBtn" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.526
anchor_top = 0.59
anchor_right = 0.526
anchor_bottom = 0.59
offset_left = -117.952
offset_top = -45.32
offset_right = 53.048
offset_bottom = -14.32
grow_horizontal = 2
grow_vertical = 2
text = "Prepare Food"

[connection signal="pressed" from="SleepBtn" to="." method="_on_sleep_btn_pressed"]
[connection signal="pressed" from="WakeBtn" to="." method="_on_wake_btn_pressed"]
[connection signal="pressed" from="FeedBtn" to="." method="_on_feed_btn_pressed"]
[connection signal="pressed" from="PrepareBtn" to="." method="_on_prepare_btn_pressed"]
